# Ego-plannerforIntelligentUAVChampionshipSimulator

./: .gitignore  README.md
src/championship_modules/reverser/: CMakeLists.txt  package.xml
src/championship_modules/reverser/launch/: bringup.launch
src/championship_modules/reverser/src/: cmd_reverse.cpp  odom_reverse.cpp
src/championship_modules/ring_detect/: CMakeLists.txt  package.xml
src/championship_modules/ring_detect/include/: ring_detect.h
src/championship_modules/ring_detect/src/: bringup.cpp  ring_detect.cpp
src/planner/plan_manage/launch/: advanced_param_exp.xml  single_run_in_exp.launch  single_run_in_sim.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml  right.yaml  vins_rviz_config.rviz
src/realflight_modules/VINS-Fusion/config/vins_output/: bias.txt  extrinsic_parameter.txt  stamped_traj_estimate.txt
src/realflight_modules/VINS-Fusion/vins_estimator/launch/: D455_640x480.launch
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/reverser/reverser/launch/: airsim.rviz  rviz.launch  tf_publisher.launch
src/reverser/reverser/msg/: PositionCommand.msg
src/reverser/reverser/src/: odom_reverse.cpp
